+Updated ExecuteFunction_str
ExecuteFunction_str no longer uses const char* as arguments, from now it uses std::string

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "thread": "cpp",
         "iostream": "cpp",
         "iosfwd": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "array": "cpp",
+        "vector": "cpp",
+        "xutility": "cpp"
     }
 }
